@@ -272,6 +272,7 @@ const MOption MP_COMPOSE_BCC;
 const MOption MP_COMPOSE_SHOW_FROM;
 const MOption MP_LIST_ADDRESSES;
 const MOption MP_EQUIV_ADDRESSES;
+const MOption MP_NEVER_SEND_TO_ADDRESSES;
 const MOption MP_DEFAULT_REPLY_KIND;
 const MOption MP_REPLY_PREFIX;
 const MOption MP_FORWARD_PREFIX;
@@ -694,6 +695,7 @@ static const MOptionData MOptions[] =
     DEFINE_OPTION(MP_COMPOSE_SHOW_FROM),
     DEFINE_OPTION(MP_LIST_ADDRESSES),
     DEFINE_OPTION(MP_EQUIV_ADDRESSES),
+    DEFINE_OPTION(MP_NEVER_SEND_TO_ADDRESSES),
     DEFINE_OPTION(MP_DEFAULT_REPLY_KIND),
     DEFINE_OPTION(MP_REPLY_PREFIX),
     DEFINE_OPTION(MP_FORWARD_PREFIX),
